# PlomerSwiftSdk/Classes/OpenAPIs/Models/GetCollection200Response.swift
@@ -1,0 +1,33 @@
+//
+// GetCollection200Response.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public enum GetCollection200Response: Codable, JSONEncodable, Hashable {
+    case typeCollectionWithProfiles(CollectionWithProfiles)
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.singleValueContainer()
+        switch self {
+        case .typeCollectionWithProfiles(let value):
+            try container.encode(value)
+        }
+    }
+
+    public init(from decoder: Decoder) throws {
+        let container = try decoder.singleValueContainer()
+        if let value = try? container.decode(CollectionWithProfiles.self) {
+            self = .typeCollectionWithProfiles(value)
+        } else {
+            throw DecodingError.typeMismatch(Self.Type.self, .init(codingPath: decoder.codingPath, debugDescription: "Unable to decode instance of GetCollection200Response"))
+        }
+    }
+}
+
