# PlomerSwiftSdk/Classes/OpenAPIs/Models/GetMonitoringProfile200Response.swift
@@ -1,0 +1,33 @@
+//
+// GetMonitoringProfile200Response.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public enum GetMonitoringProfile200Response: Codable, JSONEncodable, Hashable {
+    case typeMonitoringProfile(MonitoringProfile)
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.singleValueContainer()
+        switch self {
+        case .typeMonitoringProfile(let value):
+            try container.encode(value)
+        }
+    }
+
+    public init(from decoder: Decoder) throws {
+        let container = try decoder.singleValueContainer()
+        if let value = try? container.decode(MonitoringProfile.self) {
+            self = .typeMonitoringProfile(value)
+        } else {
+            throw DecodingError.typeMismatch(Self.Type.self, .init(codingPath: decoder.codingPath, debugDescription: "Unable to decode instance of GetMonitoringProfile200Response"))
+        }
+    }
+}
+
