# PlomerSwiftSdk/Classes/OpenAPIs/Models/GetNotification200Response.swift
@@ -1,0 +1,33 @@
+//
+// GetNotification200Response.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public enum GetNotification200Response: Codable, JSONEncodable, Hashable {
+    case typeNotification(Notification)
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.singleValueContainer()
+        switch self {
+        case .typeNotification(let value):
+            try container.encode(value)
+        }
+    }
+
+    public init(from decoder: Decoder) throws {
+        let container = try decoder.singleValueContainer()
+        if let value = try? container.decode(Notification.self) {
+            self = .typeNotification(value)
+        } else {
+            throw DecodingError.typeMismatch(Self.Type.self, .init(codingPath: decoder.codingPath, debugDescription: "Unable to decode instance of GetNotification200Response"))
+        }
+    }
+}
+
